# UniGetUI

./: .gitattributes  .gitignore  UniGetUI.iss  cli-arguments.md
.github/workflows/: build-release.yml  cli-headless-e2e.yml  dotnet-test.yml  release-smoke-test.yml
docs/: TUI.md
policies/: README.md  named-pipe-http-wire-protocol.md
policies/rust/: Cargo.toml  validate-rust-policy-simulator.ps1
policies/rust/.cargo/: config.toml
policies/rust/unigetui_policy_simulator_client/: Cargo.toml
policies/rust/unigetui_policy_simulator_client/src/: main.rs
policies/rust/unigetui_policy_simulator_core/: Cargo.toml
policies/rust/unigetui_policy_simulator_core/src/: broker.rs  broker_response.rs  cli.rs  command_line.rs  document_loader.rs  error.rs  lib.rs  path_resolver.rs  policy_evaluator.rs  policy_models.rs  transport.rs
policies/rust/unigetui_policy_simulator_http_tests/: Cargo.toml
policies/rust/unigetui_policy_simulator_http_tests/src/: lib.rs  main.rs
policies/rust/unigetui_policy_simulator_server/: Cargo.toml
policies/rust/unigetui_policy_simulator_server/src/: lib.rs  main.rs
policies/rust/unigetui_policy_simulator_tests/: Cargo.toml
policies/rust/unigetui_policy_simulator_tests/src/: lib.rs  main.rs
policies/rust/unigetui_policy_simulator_validate/: Cargo.toml
policies/rust/unigetui_policy_simulator_validate/src/: main.rs
policies/samples/: corporate-allowlist.policy.json  deny-risky-options.policy.json  powershell-advanced.policy.json  powershell-current-user.policy.json  scenario-coverage.policy.json
policies/schemas/: unigetui.package-broker-response.schema.1.0.json  unigetui.package-policy.schema.1.0.json  unigetui.package-request.schema.1.0.json
policies/scripts/: UniGetUIPolicySimulation.psm1
scripts/: build.ps1
src/: UniGetUI.Avalonia.slnx  UniGetUI.Windows.slnx
src/Languages/: lang_af.json  lang_ar.json  lang_be.json  lang_bg.json  lang_bn.json  lang_ca.json  lang_cs.json  lang_da.json  lang_de.json  lang_el.json  lang_en.json  lang_eo.json  lang_es-MX.json  lang_es.json  lang_et.json  lang_fa.json  lang_fi.json  lang_fil.json  lang_fr.json  lang_gl.json  lang_gu.json  lang_he.json  lang_hi.json  lang_hr.json  lang_hu.json  lang_id.json  lang_it.json  lang_ja.json  lang_ka.json  lang_kn.json  lang_ko.json  lang_ku.json  lang_lt.json  lang_mk.json  lang_mr.json  lang_nb.json  lang_nl.json  lang_nn.json  lang_pl.json  lang_pt_BR.json  (+19 more)
src/UniGetUI.Avalonia/: App.axaml.cs  UniGetUI.Avalonia.csproj
src/UniGetUI.Core.SecureSettings/: SecureSettings.cs
(+136 files in other folders)
