[package]
name = "unigetui_policy_simulator_http_tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
unigetui_policy_simulator_core = { path = "../unigetui_policy_simulator_core" }
unigetui_policy_simulator_server = { path = "../unigetui_policy_simulator_server" }
