[package]
name = "unigetui_policy_simulator_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unigetui_policy_simulator_core = { path = "../unigetui_policy_simulator_core" }
uuid.workspace = true

[lib]
name = "unigetui_policy_simulator_server"
path = "src/lib.rs"

