[package]
name = "unigetui_policy_simulator_validate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
unigetui_policy_simulator_core = { path = "../unigetui_policy_simulator_core" }
unigetui_policy_simulator_http_tests = { path = "../unigetui_policy_simulator_http_tests" }
unigetui_policy_simulator_tests = { path = "../unigetui_policy_simulator_tests" }
